--- a/css.css
+++ b/css.css
@@ -261,10 +261,18 @@ table {
 }
 body {
   padding-top: 40px;
+  background: #f2f2f2 url("bg.png");
+}
+a {
+  text-decoration: none;
 }
 h1 {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
+}
+h1,
+h2 {
+  cursor: default;
 }
 #twitterbtn {
   position: absolute;
@@ -275,6 +283,7 @@ h1 {
 .col {
   position: absolute;
   text-align: center;
+  padding: 0 20px;
 }
 .col-left {
   left: 0;
@@ -284,7 +293,119 @@ h1 {
   left: 50%;
   right: 0;
 }
+.header {
+  position: relative;
+  height: 40px;
+}
+.header h2 {
+  float: left;
+  margin-top: 10px;
+}
+.header .controls {
+  position: absolute;
+  right: 0;
+}
 textarea {
-  width: 95%;
+  width: 100%;
   height: 400px;
+}
+button {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  margin: 0;
+  position: relative;
+  display: block;
+  color: #666;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.59);
+  background: #ececec;
+  padding: 6px 20px 7px 20px;
+  outline: none;
+  border: 1px solid #d8d8d8;
+  border-bottom: 1px solid #ccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  cursor: pointer;
+  overflow: visible;
+  -webkit-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.57);
+  -moz-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.57);
+  -ms-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.57);
+  -o-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.57);
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.57);
+}
+button:hover {
+  color: #888;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.69);
+  -webkit-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.75);
+  -moz-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.75);
+  -ms-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.75);
+  -o-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.75);
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 15px 14px rgba(255,255,255,0.75);
+}
+button:active {
+  color: #696969;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.53);
+  border: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d8d8d8;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -15px 14px rgba(255,255,255,0.2);
+  -moz-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -15px 14px rgba(255,255,255,0.2);
+  -ms-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -15px 14px rgba(255,255,255,0.2);
+  -o-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -15px 14px rgba(255,255,255,0.2);
+  box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -15px 14px rgba(255,255,255,0.2);
+}
+#footer {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+.github-ribbon {
+  background-color: #121621;
+  top: 3.2em;
+  right: -3.7em;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-box-shadow: 0 0 0 1px #1d212e inset, 0 0 2px 1px #fff inset, 0 0 1em #888;
+  -moz-box-shadow: 0 0 0 1px #1d212e inset, 0 0 2px 1px #fff inset, 0 0 1em #888;
+  -ms-box-shadow: 0 0 0 1px #1d212e inset, 0 0 2px 1px #fff inset, 0 0 1em #888;
+  -o-box-shadow: 0 0 0 1px #1d212e inset, 0 0 2px 1px #fff inset, 0 0 1em #888;
+  box-shadow: 0 0 0 1px #1d212e inset, 0 0 2px 1px #fff inset, 0 0 1em #888;
+  color: rgba(255,255,255,0.9);
+  display: block;
+  padding: 0.6em 3.5em;
+  position: fixed;
+  font: bold 0.82em 'Lato' sans-serif;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 1px -1px 8px rgba(0,0,0,0.6);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+.github-ribbon-msg {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 6.4em;
+  right: 2.5em;
+  font-size: 10px;
+  position: absolute;
+  font-family: sans-serif;
+  color: #000;
+}
+.github-ribbon-msg:hover {
+  color: #f00;
 }
