--- a/css.styl
+++ b/css.styl
@@ -1,12 +1,20 @@
 @import reset
 @import normalize
+@import mixins
 
 body
   padding-top 40px
+  background #F2F2F2 url('bg.png')
+
+a
+  text-decoration none
 
 h1
   text-align center
-  margin-bottom 50px
+  margin-bottom 70px
+
+h1, h2
+  cursor default
 
 #twitterbtn
   position absolute
@@ -17,6 +25,7 @@ h1
 .col
   position absolute
   text-align center
+  padding 0 20px
 
 .col-left
   left 0
@@ -26,6 +35,78 @@ h1
   left 50%
   right 0
 
+.header
+  position relative
+  height 40px
+  h2
+    float left
+    margin-top 10px
+  .controls
+    position absolute
+    right 0
+
 textarea
-  width 95%
+  width 100%
   height 400px
+
+button
+  font-family "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-size 12px
+  margin 0
+  position relative
+  display block
+  color #666
+  text-shadow 0px 1px 0px rgba(255,255,255,0.59)
+  background #ececec
+  padding 6px 20px 7px 20px
+  outline none
+  border 1px solid #d8d8d8
+  border-bottom 1px solid #ccc
+  border-radius 3px
+  cursor pointer
+  overflow visible
+  box-shadow 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.0187), inset 0px 15px 14px rgba(255,255,255,0.57)
+  &:hover
+    color #888
+    text-shadow 0px 1px 0px rgba(255,255,255,0.69)
+    box-shadow 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.0187), inset 0px 15px 14px rgba(255,255,255,0.75)
+  &:active
+    color #696969
+    text-shadow 0px 1px 0px rgba(255,255,255,0.53)
+    border 1px solid #d2d2d2
+    border-bottom 1px solid #d8d8d8
+    border-radius 3px
+    box-shadow 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -15px 14px rgba(255,255,255,0.20)
+
+
+#footer
+  position absolute
+  bottom 10px
+  left 10px
+
+.github-ribbon
+  background-color #121621
+  top 3.2em
+  right -3.7em
+  transform rotate(45deg)
+  box-shadow 0 0 0 1px #1d212e inset,0 0 2px 1px #fff inset,0 0 1em #888
+  color rgba(255,255,255,0.90)
+  display block
+  padding .6em 3.5em
+  position fixed
+  font bold .82em 'Lato' sans-serif
+  text-align center
+  text-decoration none
+  text-shadow 1px -1px 8px rgba(0,0,0,0.60)
+  user-select none
+
+.github-ribbon-msg
+  transform rotate(45deg)
+  top 6.4em
+  right 2.5em
+  font-size 10px
+  position absolute
+  font-family sans-serif
+  color black
+  &:hover
+    color red
