--- a/css.css
+++ b/css.css
@@ -262,6 +262,7 @@ table {
 body {
   padding-top: 40px;
   background: #f2f2f2 url("bg.png");
+  color: #444;
 }
 a {
   text-decoration: none;
@@ -289,6 +290,20 @@ h2 {
   left: 0;
   right: 50%;
 }
+.col-left .controls {
+  margin-top: 10px;
+}
+.col-left .controls h3 {
+  float: left;
+  margin-right: 10px;
+}
+.col-left .controls .radios {
+  float: right;
+}
+.col-left .controls .radios label {
+  margin-right: 10px;
+  font-size: 14px;
+}
 .col-right {
   left: 50%;
   right: 0;
@@ -308,6 +323,80 @@ h2 {
 textarea {
   width: 100%;
   height: 400px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  border-color: #999;
+}
+input[type="radio"] {
+  cursor: pointer;
+  margin: 0;
+  -webkit-appearance: none;
+  -webkit-margin-start: 5px;
+  -webkit-margin-end: 5px;
+  display: inline-block;
+  height: 14px;
+  position: relative;
+  vertical-align: middle;
+  width: 14px;
+  background: #ececec;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+  border: 1px solid #d8d8d8;
+  border-bottom: 1px solid #ccc;
+  -webkit-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.57);
+  -moz-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.57);
+  -ms-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.57);
+  -o-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.57);
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.57);
+}
+input[type="radio"]:hover {
+  color: #888;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.69);
+  -webkit-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.78);
+  -moz-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.78);
+  -ms-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.78);
+  -o-box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.78);
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.019), inset 0px 6px 7px rgba(255,255,255,0.78);
+}
+input[type="radio"]:active {
+  color: #696969;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.53);
+  border: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d8d8d8;
+  -webkit-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -6px 7px rgba(255,255,255,0.2);
+  -moz-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -6px 7px rgba(255,255,255,0.2);
+  -ms-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -6px 7px rgba(255,255,255,0.2);
+  -o-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -6px 7px rgba(255,255,255,0.2);
+  box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -6px 7px rgba(255,255,255,0.2);
+}
+input[type="radio"]:checked::before {
+  -webkit-margin-start: 3px;
+  background: rgba(102,102,102,0.74);
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+  content: '';
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 400;
+  height: 6px;
+  left: 0;
+  margin-top: 3px;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  position: absolute;
+  top: 0;
+  vertical-align: top;
+  width: 6px;
+  -webkit-box-shadow: 0px 1px 0px rgba(255,255,255,0.69), inset 0px 1px 3px rgba(0,0,0,0.35);
 }
 button {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -402,7 +491,7 @@ button:active {
   top: 6.4em;
   right: 2.5em;
   font-size: 10px;
-  position: absolute;
+  position: fixed;
   font-family: sans-serif;
   color: #000;
 }
