--- a/css.styl
+++ b/css.styl
@@ -5,6 +5,7 @@
 body
   padding-top 40px
   background #F2F2F2 url('bg.png')
+  color #444
 
 a
   text-decoration none
@@ -30,6 +31,16 @@ h1, h2
 .col-left
   left 0
   right 50%
+  .controls
+    margin-top 10px
+    h3
+      float left
+      margin-right 10px
+    .radios
+      float right
+      label
+        margin-right 10px
+        font-size 14px
 
 .col-right
   left 50%
@@ -48,6 +59,55 @@ h1, h2
 textarea
   width 100%
   height 400px
+  border-radius 3px
+  border-color #999
+
+input[type="radio"]
+  cursor pointer
+  margin 0
+  -webkit-appearance none
+  -webkit-margin-start 5px
+  -webkit-margin-end 5px
+  display inline-block
+  height 14px
+  position relative
+  vertical-align middle
+  width 14px
+  background #ececec
+  border-radius 100%
+  border 1px solid #d8d8d8
+  border-bottom 1px solid #ccc
+  box-shadow 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.0187), inset 0px 6px 7px rgba(255,255,255,0.57)
+  &:hover
+    color #888
+    text-shadow 0px 1px 0px rgba(255,255,255,0.69)
+    box-shadow 0px 2px 2px rgba(0,0,0,0.027), inset 0px 1px 0px rgba(255,255,255,0.69), inset 0px -1px 0px rgba(0,0,0,0.0187), inset 0px 6px 7px rgba(255,255,255,0.78)
+  &:active
+    color #696969
+    text-shadow 0px 1px 0px rgba(255,255,255,0.53)
+    border 1px solid #d2d2d2
+    border-bottom 1px solid #d8d8d8
+    box-shadow 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -6px 7px rgba(255,255,255,0.20)
+  &:checked
+    &::before
+      -webkit-margin-start 3px
+      background rgba(102, 102, 102, 0.74)
+      border-radius 100%
+      content ''
+      display inline-block
+      font-size 12px
+      font-weight 400
+      height 6px
+      left 0
+      margin-top 3px
+      opacity 1
+      position absolute
+      top 0
+      vertical-align top
+      width 6px
+      -webkit-box-shadow 0px 1px 0px rgba(255,255,255,0.69), inset 0px 1px 3px rgba(0,0,0,0.35)
+
+
 
 button
   font-family "Helvetica Neue", Helvetica, Arial, sans-serif
@@ -105,7 +165,7 @@ button
   top 6.4em
   right 2.5em
   font-size 10px
-  position absolute
+  position fixed
   font-family sans-serif
   color black
   &:hover
