UPDATE renamed minified css file

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,7 +1,7 @@
 !!!5
 meta(charset="utf-8")
 title Css2Stylus
-link(href="css/css.css", rel="stylesheet")
+link(href="css/css.min.css", rel="stylesheet")
 
 h1 Css2Stylus
 
