update ribbon styles

--- a/src/styl/css.styl
+++ b/src/styl/css.styl
@@ -250,17 +250,17 @@ select
   display block
   padding .6em 3.5em
   position fixed
-  font bold .82em 'Lato' sans-serif
+  font bold .82em sans-serif
   text-align center
   text-decoration none
   text-shadow 1px -1px 8px rgba(0,0,0,0.60)
   user-select none
 
 .github-ribbon-msg
-  transform rotate(45deg)
-  top 6.4em
-  right 2.5em
-  font-size 10px
+  transform rotate(44deg)
+  top 6.3em
+  right 2.3em
+  font-size 11px
   position fixed
   font-family sans-serif
   color black
