Multiple media queries

--- a/test/expected/media.styl
+++ b/test/expected/media.styl
@@ -1,3 +1,8 @@
-@media(min-width: 1200px)
-	.timeline>li
+@media(min-width:1200px)
+  .timeline>li {
 		min-height 170px
+
+@media(max-width:767px)
+  before {
+		left 40px
+
