Stylus output doesn't actually compile...

--- a/test/expected/media.styl
+++ b/test/expected/media.styl
@@ -1,8 +1,8 @@
 @media(min-width:1200px)
-  .timeline>li {
+  .timeline>li
 		min-height 170px
 
 @media(max-width:767px)
-  before {
+  before
 		left 40px
 
