--- a/test/expected/denis.styl
+++ b/test/expected/denis.styl
@@ -1,12 +1,10 @@
-@media(max-width: 767px)
+@media (max-width: 767px)
   before
-    left 40px
+    left: 40px
+  ul.timeline > li
+    margin-bottom: 20px
+    position: relative
+    width: 100%
+    float: left
+    clear: left
 
-ul
-  &.timeline
-    & > li
-      margin-bottom 20px
-      position relative
-      width 100%
-      float left
-      clear left
