--- a/test/fixture/hover.css
+++ b/test/fixture/hover.css
@@ -1,4 +1,5 @@
 a.OUT_FOR_DAY.primary-button {
+	padding: 30px;
 	background-color: #f06060 !important;
 	box-shadow: 0px 10px 0px 0px #cd1313 !important;
 }
