--- a/test/expected/media.styl
+++ b/test/expected/media.styl
@@ -1,13 +1,14 @@
-@media(min-width:1200px)
-  .timeline>li
-		min-height 170px
+@media(min-width: 1200px)
+  .timeline
+    & > li
+      min-height 170px
 
 .ExtraCss
-	top 15px
+  top 15px
 
-@media(max-width:767px)
+@media(max-width: 767px)
   before
-		left 40px
-	after
-		right 100px
+    left 40px
+  after
+    right 100px
 
