--- a/test/expected/GithubIssue.styl
+++ b/test/expected/GithubIssue.styl
@@ -1,8 +1,18 @@
+@media only screen and (max-width: 998px)
+  .page
+    &.grid
+      padding 0% 4%
+
+@media (min-width: 1200px)
+  .timeline
+    & > li
+      min-height 170px
+
 @media (max-width: 767px)
   before
     left 40px
   ul
-    .timeline
+    &.timeline
       & > li
         margin-bottom 20px
         position relative
