--- a/test/expected/hover.styl
+++ b/test/expected/hover.styl
@@ -2,8 +2,8 @@ a
   &.OUT_FOR_DAY
     &.primary-button
       padding 30px
-      background-color #f06060 !important
-      box-shadow 0px 10px 0px 0px #cd1313 !important
+      background-color #f06060
+      box-shadow 0px 10px 0px 0px #cd1313
       &:hover
         background-color #ed4444 !important
 
